test/files/neg/macro-invalidusage-typetype-expands-to-apply/Macros_Test_2.scala
object Macros {
  type Foo(x: Int) = macro Impls.foo
}

object Test extends App {
  import Macros._
  val x: Foo(2) = new C(2)
}